# agenticsettle-mcp

./: .gitignore  .mcpbignore  PRIVACY.md  README.ko.md  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
agenticsettle_verify_mcp/: __init__.py  __main__.py  server.py
scripts/: gen_icon.py
tests/: test_mcpb_bootstrap.py  test_server.py
