[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticsettle-verify-mcp"
version = "1.0.0"
description = "Free VOP (Verified Output Protocol) verification MCP server for AI agent outputs — no escrow, no financial transaction"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "AgenticSettle", email = "agenticsettleio@gmail.com" },
]
keywords = ["mcp", "ai-agents", "verification", "vop", "agenticsettle", "quality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://agenticsettle.io"
Repository = "https://github.com/agenticsettleio/agenticsettle-mcp"

[project.scripts]
agenticsettle-verify-mcp = "agenticsettle_verify_mcp.server:main"

[tool.setuptools.packages.find]
include = ["agenticsettle_verify_mcp*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
